<resources>
    <string name="app_name">Game Library - Brandon</string>
    <string name="nameMissing">NAME MISSING</string>
    <string name="allPlatforms">ALL PLATFORMS</string>
    <string name="gameNameFormat" translatable="false">%1$s (%2$d)</string>
    <string name="allGames">ALL GAMES</string>
    <string name="myWishlist">My Wishlist</string>
    <string name="gameDetails">Game Details</string>
    <string name="noDescription">NO DESCRIPTION</string>
    <string name="noTitle">NO TITLE</string>
    <string name="composeReview">Compose Review</string>
    <string name="loginButton">Login</string>
    <string name="actionSignOut">Sign Out</string>
    <string name="actionUserProfile">User Profile</string>
    <string name="home">Home</string>
    <string name="gameList">Game List</string>
    <string name="myProfile">My Profile</string>
    <string name="shareGame">Share Game</string>
    <string name="myLibrary">My Library</string>
    <string name="gameBannerDescription">Banner for game</string>
    <string name="screenshot_1">Screenshot 1</string>
    <string name="screenshot_2">Screenshot 2</string>
    <string name="screenshot_3">Screenshot 3</string>
    <string name="addToLibrary">Add to Library</string>
    <string name="addToWishlist">Add to Wishlist</string>
    <string name="gameImageDescription">Image for game</string>
    <string name="unknownPlatform">Unknown Platform</string>
    <string name="playStation">PlayStation</string>
    <string name="windows">Windows</string>
    <string name="nSwitch">Switch</string>
    <string name="myProfilePhoto">My profile photo</string>
    <string name="cameraButton">Camera button</string>
    <string name="galleryButton">Gallery button</string>
    <string name="publish">Publish</string>
    <string name="enterReviewHint">Enter review...</string>
    <string name="sortByPriceShipping">Sort by Price + Shipping</string>
    <string name="controllerSupport">Controller Support:</string>
    <string name="multiplayerSupport">Multiplayer Support:</string>
    <string name="genre">Genre:</string>
    <string name="findOnEbay">Find on eBay</string>
    <string name="userId">User ID</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="status">Status</string>
    <string name="setPlatforms">Set Platforms</string>
    <string name="myPlatforms">My Platforms</string>
    <string name="userProfilePhoto">User profile photo</string>
    <string name="platforms">Platforms</string>
    <string name="lastLogin">Last Login</string>
    <string name="library">Library</string>
    <string name="wishlist">Wishlist</string>
    <string name="deleteReviewButton">Delete review button</string>
    <string name="ebayItemImage">Ebay item image</string>
    <string name="gameIcon">Game icon</string>
    <string name="noUrlForListing">No URL for listing.</string>
    <string name="itemNameMissing">Item Name Missing</string>
    <string name="itemPriceMissing">Item Price Missing</string>
    <string name="itemSellerMissing">Item Seller Missing</string>
    <string name="freeShipping">Free shipping</string>
    <string name="calculatedAtCheckout">Shipping calculated at checkout</string>
    <string name="developerMissing">DEVELOPER MISSING</string>
    <string name="deleteReview">Delete Review</string>
    <string name="areYouSureDelete">Are you sure you want to delete your review?</string>
    <string name="noUsername">NO USERNAME</string>
    <string name="noDate">NO DATE</string>
    <string name="noText">NO TEXT</string>
    <string name="displayNameMissing">Display Name Missing!</string>
    <string name="xbox">Xbox</string>
    <string name="games">Games</string>
    <string name="users">Users</string>
    <string name="userProfile">User Profile</string>
    <string name="ebayListings">Ebay Listings</string>
    <string name="averagePriceUSD">Average price: $</string>
    <string name="reviews">Reviews</string>
    <string name="shareGameMessage">Check this game out</string>
    <string name="noGameSelected">No game selected.</string>
    <string name="errorGettingGame">Error getting game.</string>
    <string name="gameDoesNotExist">Game does not exist.</string>
    <string name="errorGettingReviews">Error getting reviews.</string>
    <string name="errorDeletingReview">Error deleting review.</string>
    <string name="reviewPostedSuccessfully">Review posted successfully.</string>
    <string name="searchRequestUnsuccessful">Search request unsuccessful.</string>
    <string name="userMissing">USER MISSING</string>
    <string name="errorGettingUser">Error getting user.</string>
    <string name="userDoesNotExist">User does not exist.</string>
    <string name="errorGettingLibrary">Error getting library.</string>
    <string name="errorGettingWishlist">Error getting wishlist.</string>
    <string name="errorGettingPlatforms">Error getting platforms.</string>
    <string name="failedToAddToLibrary">Failed to add to library</string>
    <string name="addedToLibrary">Added to library.</string>
    <string name="failedToRemoveFromLibrary">Failed to remove library.</string>
    <string name="removedFromLibrary">Removed from library.</string>
    <string name="failedToAddToWishlist">Failed to add to wishlist.</string>
    <string name="addedToWishlist">Added to wishlist.</string>
    <string name="failedToRemoveFromWishlist">Failed to remove wishlist.</string>
    <string name="removedFromWishlist">Removed from wishlist.</string>
    <string name="failedToPublishReview">Failed to publish review.</string>
    <string name="reviewAdded">Review added.</string>
    <string name="errorGettingUserProfile">Error getting user profile.</string>
    <string name="userNotLoggedIn">User not logged in.</string>
    <string name="failedToSavePlatforms">Failed to save platforms.</string>
    <string name="failedToUploadImage">Failed to upload image.</string>
    <string name="failedToGetDownloadUrl">Failed to to get download URL.</string>
    <string name="cannotUpdateProfilePhoto">Cannot update profile photo because user is not authenticated.</string>
    <string name="failedToGetUsers">Failed to get users.</string>
    <string name="choosePlatforms">Choose Platforms</string>
    <string name="signOut">Sign Out</string>
    <string name="sureSignOut">Are you sure you want to sign out?</string>
</resources>