<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfileActivity">


    <TextView
        android:id="@+id/myProfileErrorText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="User Error Text" />

    <ImageView
        android:id="@+id/myProfilePhoto"
        android:layout_width="@dimen/profilePhotoSize"
        android:layout_height="@dimen/profilePhotoSize"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myProfileErrorText"
        app:srcCompat="@drawable/ic_broken_image"
        android:contentDescription="@string/myProfilePhoto" />

    <TextView
        android:id="@+id/myIdLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/userId"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toEndOf="@+id/myProfilePhoto"
        app:layout_constraintTop_toBottomOf="@+id/myProfileErrorText" />

    <TextView
        android:id="@+id/myIdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/myProfilePhoto"
        app:layout_constraintTop_toBottomOf="@+id/myIdLabel"
        tools:text="User ID" />

    <TextView
        android:id="@+id/myNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/name"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/myProfilePhoto"
        app:layout_constraintTop_toBottomOf="@+id/myIdText" />

    <TextView
        android:id="@+id/myNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/myProfilePhoto"
        app:layout_constraintTop_toBottomOf="@+id/myNameLabel"
        tools:text="User Name" />

    <TextView
        android:id="@+id/myEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/email"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/myProfilePhoto"
        app:layout_constraintTop_toBottomOf="@+id/myNameText" />

    <TextView
        android:id="@+id/myEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/myProfilePhoto"
        app:layout_constraintTop_toBottomOf="@+id/myEmailLabel"
        tools:text="User Email" />

    <ImageButton
        android:id="@+id/myProfileCameraButton"
        android:layout_width="@dimen/camberaButtonSize"
        android:layout_height="@dimen/camberaButtonSize"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/cameraButton"
        android:theme="@style/WidgetOverlay.Secondary"
        app:layout_constraintEnd_toStartOf="@+id/myProfileGalleryButton"
        app:layout_constraintStart_toStartOf="@+id/myProfilePhoto"
        app:layout_constraintTop_toBottomOf="@+id/myProfilePhoto"
        app:srcCompat="@drawable/ic_camera" />

    <ImageButton
        android:id="@+id/myProfileGalleryButton"
        android:layout_width="@dimen/galleryButtonSize"
        android:layout_height="@dimen/galleryButtonSize"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/galleryButton"
        android:theme="@style/WidgetOverlay.Secondary"
        app:layout_constraintEnd_toEndOf="@+id/myProfilePhoto"
        app:layout_constraintStart_toEndOf="@+id/myProfileCameraButton"
        app:layout_constraintTop_toBottomOf="@+id/myProfilePhoto"
        app:srcCompat="@drawable/ic_gallery" />

    <TextView
        android:id="@+id/myStatusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/status"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/myProfilePhoto"
        app:layout_constraintTop_toBottomOf="@+id/myEmailText" />

    <TextView
        android:id="@+id/myStatusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/myProfilePhoto"
        app:layout_constraintTop_toBottomOf="@+id/myStatusLabel"
        tools:text="User Status" />

    <TextView
        android:id="@+id/myProfilePhotoErrorText"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myStatusText"
        tools:text="Photo Error Text" />

    <Button
        android:id="@+id/setPlatformsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/setPlatforms"
        android:textColor="@color/black"
        android:backgroundTint="@color/orange_200"
        app:layout_constraintEnd_toEndOf="@+id/myProfilePhoto"
        app:layout_constraintStart_toStartOf="@+id/myProfilePhoto"
        app:layout_constraintTop_toBottomOf="@+id/myProfilePhotoErrorText" />

    <TextView
        android:id="@+id/myPlatformsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/myPlatforms"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/myStatusText"
        app:layout_constraintStart_toStartOf="@+id/myStatusText"
        app:layout_constraintTop_toBottomOf="@+id/myProfilePhotoErrorText" />

    <ImageView
        android:id="@+id/myPlatform1"
        android:layout_width="@dimen/profilePlatformIconSize"
        android:layout_height="@dimen/profilePlatformIconSize"
        android:layout_marginTop="16dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toStartOf="@+id/myPlatform2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/setPlatformsButton"
        app:layout_constraintTop_toBottomOf="@+id/myPlatformsLabel"
        app:srcCompat="@drawable/ic_downloading"
        android:contentDescription="@string/playStation" />

    <ImageView
        android:id="@+id/myPlatform2"
        android:layout_width="@dimen/profilePlatformIconSize"
        android:layout_height="@dimen/profilePlatformIconSize"
        android:layout_marginTop="16dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toStartOf="@+id/myPlatform3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/myPlatform1"
        app:layout_constraintTop_toBottomOf="@+id/myPlatformsLabel"
        app:srcCompat="@drawable/ic_downloading"
        android:contentDescription="@string/xbox" />

    <ImageView
        android:id="@+id/myPlatform3"
        android:layout_width="@dimen/profilePlatformIconSize"
        android:layout_height="@dimen/profilePlatformIconSize"
        android:layout_marginTop="16dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toStartOf="@+id/myPlatform4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/myPlatform2"
        app:layout_constraintTop_toBottomOf="@+id/myPlatformsLabel"
        app:srcCompat="@drawable/ic_downloading"
        android:contentDescription="@string/windows" />

    <ImageView
        android:id="@+id/myPlatform4"
        android:layout_width="@dimen/profilePlatformIconSize"
        android:layout_height="@dimen/profilePlatformIconSize"
        android:layout_marginTop="16dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/myPlatform3"
        app:layout_constraintTop_toBottomOf="@+id/myPlatformsLabel"
        app:srcCompat="@drawable/ic_downloading"
        android:contentDescription="@string/nSwitch" />

    <TextView
        android:id="@+id/myLibraryLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/myLibrary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setPlatformsButton" />

    <TextView
        android:id="@+id/myLibraryErrorText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myLibraryLabel"
        tools:text="My Library Error Text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/myLibrary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myLibraryErrorText" />

    <TextView
        android:id="@+id/myWishlistLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/myWishlist"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myLibrary" />

    <TextView
        android:id="@+id/myWishlistErrorText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myWishlistLabel"
        tools:text="My Wishlist Error Text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/myWishlist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myWishlistErrorText" />


</androidx.constraintlayout.widget.ConstraintLayout>